--- a/src/components/Peticion/peticion.css
+++ b/src/components/Peticion/peticion.css
@@ -14,11 +14,12 @@
   border-radius: 8px;
   padding: 10px;
   background-color: #fff;
+  border: 1px solid #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .tarjeta:hover {
-  border: 1px solid #ff0000;
+  border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
